@@ -6,6 +6,7 @@ JEDIT 2.4 VERSION HISTORY
 
 - The text area should now retain focus when switching windows
 - Documentation updates
+- 'Untitled' buffers no longer saved in sessions
 
 + Bug Fixes
 
